Changed wording on complexity question

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -237,7 +237,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-">
-                    <legend class="c-txt__label u-pt-lg u-pl-sm">Very complex issue to you: 1 (low) - 5 (high)</legend>
+                    <legend class="c-txt__label u-pt-lg u-pl-sm">Very complex issue: 1 (low) - 5 (high)</legend>
                 </div>
                 <!--Complexity selectors-->
                 <div class="row u-pl-sm u-pt-lg">
