Workaround double save conflict using direct API calls to update ticket fields

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -32,9 +32,6 @@
                 <div class="col-md-4 u-pt-sm">
                     <label id=current-ticket></label>
                 </div>
-                <div class="col-md-4 u-pt-sm" id="clear-button-div">
-                    <a href="#" id="clear-button">Clear</a>
-                </div>
             </div>
             <p>Dev Ticket: Requester writing code against Zendesk Developer Platform. Select most significant platform area.</p>
             <hr class="custom-line">
@@ -227,7 +224,7 @@
             <div class="row u-pt-xs">
                 <div class="col-xl">
                     <div class="c-txt">
-                        <label class="c-txt__label" for="additional-info">Additional info</label>
+                        <label class="c-txt__label" for="additional-info">Additional information</label>
                         <input class="c-txt__input" id="additional-info" type="text" name="additional-info"
                             placeholder="Add any additional comments here" autocomplete="off">
                     </div>
@@ -292,7 +289,8 @@
         <div class="row">
             <div class="col-xl">
                 <div class="l-btn-group float-right u-pr-sm u-pb-sm u-pt-sm">
-                    <button id="save-button" class="c-btn c-btn--sm c-btn--pill c-btn--primary">Save</button>
+                    <a href="#" id="clear-button">clear form</a>
+                    <button id="save-button" class="c-btn c-btn--sm c-btn--pill c-btn--primary">Set</button>
                     <button id="cancel-button" class="c-btn c-btn--sm c-btn--pill c-btn--muted">Cancel</button>
                 </div>
             </div>
