Fixed bug with area field being set incorrectly

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -317,6 +317,11 @@
       $('input[name=complexity-rating]').click(() => {
         setComplexityRaterToCurrentUser()
       })
+
+      $('input[name=feature-area]').click(() => {
+        setArea()
+      })
+
     })
     </script>
 </body>
