Fixed horizontal scrolling issue

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -4,19 +4,19 @@
 <head>
   <title>Developer Support Ticket Helper</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-bedrock@7/dist/index.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-forms@7/dist/index.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-grid@0.1.36/dist/index.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-utilities@4/dist/index.min.css">
   <!--     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-menus@9/dist/index.min.css">
  -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-buttons@7/dist/index.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-bedrock@7/dist/index.min.css">
   <!--     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-modals@6/dist/index.min.css">
  -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
   <script src="https://static.zdassets.com/zendesk_app_framework_sdk/2.0/zaf_sdk.min.js"></script>
+  <link rel="stylesheet" href="main.css">
   <script src="main.js"></script>
   </script>
 </head>
@@ -282,7 +282,7 @@
       <div class="col-xl">
         <div class="l-btn-group float-right u-pr-sm u-pb-sm u-pt-sm">
           <a href="#" id="clear-button">clear form</a>
-          <button id="save-button" class="c-btn c-btn--sm c-btn--pill c-btn--primary">Set</button>
+          <button id="save-button" class="c-btn c-btn--sm c-btn--pill c-btn--primary">Apply</button>
           <button id="cancel-button" class="c-btn c-btn--sm c-btn--pill c-btn--muted">Cancel</button>
         </div>
       </div>
