Removed to platform specific mobile APIs. Bolded top line instruction. Changed notification from error to alert.

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -8,11 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-forms@7/dist/index.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-grid@0.1.36/dist/index.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-utilities@4/dist/index.min.css">
-  <!--     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-menus@9/dist/index.min.css">
- -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-buttons@7/dist/index.min.css">
-  <!--     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-modals@6/dist/index.min.css">
- -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
   <script src="https://static.zdassets.com/zendesk_app_framework_sdk/2.0/zaf_sdk.min.js"></script>
@@ -32,7 +28,7 @@
           <label id=current-ticket></label>
         </div>
       </div>
-      <p>Dev Ticket: Requester writing code against Zendesk Developer Platform. Select most significant platform area.</p>
+      <p><strong>Select most significant platform area.</strong></p>
       <hr class="custom-line">
     </div>
     </div>
@@ -80,28 +76,11 @@
           <div class="u-mb-xxs">
             <div>
               <input class="c-chk__input" id="id-140" name="feature-area" type="radio" value="140">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-140">Chat
-                SDK -
-                iOS</label>
-            </div>
-            <div>
-              <input class="c-chk__input" id="id-141" name="feature-area" type="radio" value="141">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-141">Chat
-                SDK -
-                Android</label>
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-140">Chat SDK</label>
             </div>
             <div>
               <input class="c-chk__input" id="id-142" name="feature-area" type="radio" value="142">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-142">Support
-                SDK
-                -
-                iOS</label>
-            </div>
-            <div>
-              <input class="c-chk__input" id="id-143" name="feature-area" type="radio" value="143">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-143">Support
-                SDK -
-                Android</label>
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-142">Support SDK</label>
             </div>
           </div>
         </div>
