Removed some "other" options. Fixed up ENUMs to match

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -28,7 +28,7 @@
           <label id=current-ticket></label>
         </div>
       </div>
-      <p><strong>Select most significant platform area.</strong></p>
+      <p><strong>Select most significant platform area</strong></p>
       <hr class="custom-line">
     </div>
     </div>
@@ -79,8 +79,8 @@
               <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-140">Chat SDK</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-142" name="feature-area" type="radio" value="142">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-142">Support SDK</label>
+              <input class="c-chk__input" id="id-141" name="feature-area" type="radio" value="141">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-141">Support SDK</label>
             </div>
           </div>
         </div>
@@ -89,37 +89,22 @@
           <legend class="c-txt__label u-mt-xs ">Other</legend>
           <div class="u-mb-xxs">
             <div>
-              <input class="c-chk__input" id="id-200" name="feature-area" type="radio" value="200">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-200">Sponsored
-                dev
-                account</label>
+              <input class="c-chk__input" id="id-202" name="feature-area" type="radio" value="202">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-202">App Marketplace publishing</label>
             </div>
             <div>
               <input class="c-chk__input" id="id-201" name="feature-area" type="radio" value="201">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-201">Getting
-                app
-                published</label>
-            </div>
-            <div>
-              <input class="c-chk__input" id="id-202" name="feature-area" type="radio" value="202">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-202">Global
-                OAuth
-                client
-              </label>
-            </div>
-            <div>
-              <input class="c-chk__input" id="id-203" name="feature-area" type="radio" value="203">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-203">API
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-201">API
                 Clients</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-204" name="feature-area" type="radio" value="204">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-204">Guide/Gather
+              <input class="c-chk__input" id="id-203" name="feature-area" type="radio" value="203">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-203">Guide/Gather
                 customization</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-205" name="feature-area" type="radio" value="205">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-205">Other</label>
+              <input class="c-chk__input" id="id-200" name="feature-area" type="radio" value="200">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-200">Other</label>
             </div>
           </div>
         </div>
