Changing to tags -- first step

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -39,33 +39,33 @@
           <legend class="c-txt__label u-mt-xs ">APIs</legend>
           <div class="u-mb-xxs">
             <div>
-              <input class="c-chk__input" id="id-100" name="feature-area" type="radio" value="100">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-100">Support
+              <input class="c-chk__input" id="dsapp_api_support" name="feature-area" type="radio" value="dsapp_api_support">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_support">Support
                 API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-101" name="feature-area" type="radio" value="101">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-101">Chat
+              <input class="c-chk__input" id="dsapp_api_chat" name="feature-area" type="radio" value="dsapp_api_chat">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_chat">Chat
                 API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-102" name="feature-area" type="radio" value="102">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-102">Talk
+              <input class="c-chk__input" id="dsapp_api_talk" name="feature-area" type="radio" value="dsapp_api_talk">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_talk">Talk
                 API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-103" name="feature-area" type="radio" value="103">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-103">Chat
+              <input class="c-chk__input" id="dsapp_api_chat_convo" name="feature-area" type="radio" value="dsapp_api_chat_convo">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_chat_convo">Chat
                 Conversations API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-104" name="feature-area" type="radio" value="104">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-104">Guide
+              <input class="c-chk__input" id="dsapp_api_guide" name="feature-area" type="radio" value="dsapp_api_guide">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_guide">Guide
                 API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-105" name="feature-area" type="radio" value="105">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-105">Sell
+              <input class="c-chk__input" id="dsapp_api_sell" name="feature-area" type="radio" value="dsapp_api_sell">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_sell">Sell
                 API</label>
             </div>
           </div>
