All selections changed to tags. Changed complexity to 1 thru 3 effort. Added growler on Apply. Updated ticket fields.

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -75,12 +75,12 @@
           <legend class="c-txt__label u-mt-xs">Mobile SDKs</legend>
           <div class="u-mb-xxs">
             <div>
-              <input class="c-chk__input" id="id-140" name="feature-area" type="radio" value="140">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-140">Chat SDK</label>
+              <input class="c-chk__input" id="dsapp_sdk_chat" name="feature-area" type="radio" value="dsapp_sdk_chat">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_chat">Chat SDK</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-141" name="feature-area" type="radio" value="141">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-141">Support SDK</label>
+              <input class="c-chk__input" id="dsapp_sdk_support" name="feature-area" type="radio" value="dsapp_sdk_support">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_support">Support SDK</label>
             </div>
           </div>
         </div>
@@ -89,22 +89,22 @@
           <legend class="c-txt__label u-mt-xs ">Other</legend>
           <div class="u-mb-xxs">
             <div>
-              <input class="c-chk__input" id="id-202" name="feature-area" type="radio" value="202">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-202">App Marketplace publishing</label>
+              <input class="c-chk__input" id="dsapp_app_marketplace" name="feature-area" type="radio" value="dsapp_app_marketplace">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_app_marketplace">App Marketplace publishing</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-201" name="feature-area" type="radio" value="201">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-201">API
+              <input class="c-chk__input" id="dsapp_api_clients" name="feature-area" type="radio" value="dsapp_api_clients">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_clients">API
                 Clients</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-203" name="feature-area" type="radio" value="203">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-203">Guide/Gather
+              <input class="c-chk__input" id="dsapp_guide_customization" name="feature-area" type="radio" value="dsapp_guide_customization">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_guide_customization">Guide/Gather
                 customization</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-200" name="feature-area" type="radio" value="200">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-200">Other</label>
+              <input class="c-chk__input" id="dsapp_other" name="feature-area" type="radio" value="dsapp_other">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_other">Other</label>
             </div>
           </div>
         </div>
@@ -117,16 +117,16 @@
           <legend class="c-txt__label u-mt-xs">Apps Framework development</legend>
           <div class="u-mb-xxs">
             <div>
-              <input class="c-chk__input" id="id-120" name="feature-area" type="radio" value="120">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-120">Support</label>
+              <input class="c-chk__input" id="dsapp_zaf_support" name="feature-area" type="radio" value="dsapp_zaf_support">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_support">Support</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-121" name="feature-area" type="radio" value="121">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-121">Chat</label>
+              <input class="c-chk__input" id="dsapp_zaf_chat" name="feature-area" type="radio" value="dsapp_zaf_chat">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_chat">Chat</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-122" name="feature-area" type="radio" value="122">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-122">Sell</label>
+              <input class="c-chk__input" id="dsapp_zaf_sell" name="feature-area" type="radio" value="dsapp_zaf_sell">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_sell">Sell</label>
             </div>
           </div>
         </div>
@@ -135,23 +135,23 @@
           <legend class="c-txt__label u-mt-xs">Sunshine</legend>
           <div class="u-mx-xxs">
             <div>
-              <input class="c-chk__input" id="id-160" name="feature-area" type="radio" value="160">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-160">Custom
+              <input class="c-chk__input" id="dsapp_sunshine_co" name="feature-area" type="radio" value="dsapp_sunshine_co">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sunshine_co">Custom
                 Objects</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-161" name="feature-area" type="radio" value="161">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-161">Events
+              <input class="c-chk__input" id="dsapp_sunshine_pande" name="feature-area" type="radio" value="dsapp_sunshine_pande">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sunshine_pande">Profiles
                 and
-                Profiles</label>
+                Events</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-162" name="feature-area" type="radio" value="162">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-162">Conversations</label>
+              <input class="c-chk__input" id="dsapp_sunshine_convo" name="feature-area" type="radio" value="dsapp_sunshine_convo">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sunshine_convo">Conversations</label>
             </div>
             <div>
-              <input class="c-chk__input" id="id-163" name="feature-area" type="radio" value="163">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-163">AWS
+              <input class="c-chk__input" id="dsapp_sunshine_eventsbridge" name="feature-area" type="radio" value="dsapp_sunshine_eventsbridge">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sunshine_eventsbridge">AWS
                 Events
                 BridgeChannels Framework</label>
             </div>
@@ -162,14 +162,8 @@
           <legend class="c-txt__label u-mt-xs">Widget</legend>
           <div class="u-mb-xxs">
             <div>
-              <input class="c-chk__input" id="id-180" name="feature-area" type="radio" value="180">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-180">Widget
-                API</label>
-            </div>
-            <div>
-              <input class="c-chk__input" id="id-181" name="feature-area" type="radio" value="181">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-181">Web
-                SDK</label>
+              <input class="c-chk__input" id="dsapp_widget" name="feature-area" type="radio" value="dsapp_widget">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_widget">Widget</label>
             </div>
           </div>
         </div>
@@ -190,42 +184,28 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-">
-          <legend class="c-txt__label u-pt-lg u-pl-sm">Very complex issue to you: 1 (low) - 5 (high)</legend>
+          <legend class="c-txt__label u-pt-lg u-pl-sm">Effort score: 1 (low), 2 (med), 3 (high)</legend>
         </div>
-        <!--Complexity selectors-->
+        <!--Effort selectors-->
         <div class="row u-pl-sm u-pt-lg">
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
-              <input class="c-chk__input" id="complexity1" name="complexity-rating" type="radio" value="1">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="complexity1">1
+              <input class="c-chk__input" id="effort1" name="effort-rating" type="radio" value="1">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort1">1
               </label>
             </div>
           </div>
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
-              <input class="c-chk__input" id="complexity2" name="complexity-rating" type="radio" value="2">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="complexity2">2
+              <input class="c-chk__input" id="effort2" name="effort-rating" type="radio" value="2">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort2">2
               </label>
             </div>
           </div>
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
-              <input class="c-chk__input" id="complexity3" name="complexity-rating" type="radio" value="3">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="complexity3">3
-              </label>
-            </div>
-          </div>
-          <div class="col-">
-            <div class="u-pl-sm u-pt-xxs">
-              <input class="c-chk__input " id="complexity4" name="complexity-rating" type="radio" value="4">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular " for="complexity4">4
-              </label>
-            </div>
-          </div>
-          <div class="col-">
-            <div class="u-pl-sm u-pt-xxs">
-              <input class="c-chk__input" id="complexity5" name="complexity-rating" type="radio" value="5">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="complexity5">5
+              <input class="c-chk__input" id="effort3" name="effort-rating" type="radio" value="3">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort3">3
               </label>
             </div>
           </div>
@@ -235,18 +215,18 @@
           <div class="container-fluid">
             <div class="c-txt u-pt-sm u-pl-sm u-bg-kale-150">
               <small class="c-txt__hint">Set by:</small>
-              <label class="c-txt__label" id="complexity-user-label"></label>
+              <label class="c-txt__label" id="effort-user-label"></label>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!--Save/cancel buttons-->
+    <!--Apply/Cancel buttons-->
     <div class="row">
       <div class="col-xl">
         <div class="l-btn-group float-right u-pr-sm u-pb-sm u-pt-sm">
           <a href="#" id="clear-button">clear form</a>
-          <button id="save-button" class="c-btn c-btn--sm c-btn--pill c-btn--primary">Apply</button>
+          <button id="apply-button" class="c-btn c-btn--sm c-btn--pill c-btn--primary">Apply</button>
           <button id="cancel-button" class="c-btn c-btn--sm c-btn--pill c-btn--muted">Cancel</button>
         </div>
       </div>
@@ -258,9 +238,9 @@
       clearButtonClicked()
     })
 
-    $('#save-button').click((e) => {
+    $('#apply-button').click((e) => {
       e.preventDefault()
-      saveButtonClicked()
+      applyButtonClicked()
     })
 
     $('#cancel-button').click((e) => {
