Cleaned up effort. Commented out switching of icon.

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -184,28 +184,28 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-">
-          <legend class="c-txt__label u-pt-lg u-pl-sm">Effort score: 1 (low), 2 (med), 3 (high)</legend>
+          <legend class="c-txt__label u-pt-lg u-pl-sm">Effort score: </legend>
         </div>
         <!--Effort selectors-->
         <div class="row u-pl-sm u-pt-lg">
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
               <input class="c-chk__input" id="effort1" name="effort-rating" type="radio" value="1">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort1">1
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort1">low
               </label>
             </div>
           </div>
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
               <input class="c-chk__input" id="effort2" name="effort-rating" type="radio" value="2">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort2">2
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort2">medium
               </label>
             </div>
           </div>
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
               <input class="c-chk__input" id="effort3" name="effort-rating" type="radio" value="3">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort3">3
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort3">high
               </label>
             </div>
           </div>
