Fixed issue of Effort click not recognized.

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -191,21 +191,21 @@
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
               <input class="c-chk__input" id="effort1" name="effort-rating" type="radio" value="1">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort1">low
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort1">Low
               </label>
             </div>
           </div>
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
               <input class="c-chk__input" id="effort2" name="effort-rating" type="radio" value="2">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort2">medium
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort2">Medium
               </label>
             </div>
           </div>
           <div class="col-">
             <div class="u-pl-sm u-pt-xxs">
               <input class="c-chk__input" id="effort3" name="effort-rating" type="radio" value="3">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort3">high
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="effort3">High
               </label>
             </div>
           </div>
@@ -248,8 +248,8 @@
       cancelButtonClicked()
     })
 
-    $('input[name=complexity-rating]').click(() => {
-      setComplexityRaterToCurrentUser()
+    $('input[name=effort-rating]').click(() => {
+      setEffortRaterToCurrentUser()
     })
 
     $('input[name=feature-area]').click(() => {
