--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -34,106 +34,93 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <!--APIs-->
         <div class="col-md-4">
-          <legend class="c-txt__label u-mt-xs ">APIs</legend>
+          <!--Support-->
+          <legend class="c-txt__label u-mt-xs product-header">Support</legend>
           <div class="u-mb-xxs">
             <div>
               <input class="c-chk__input" id="dsapp_api_support" name="feature-area" type="radio" value="dsapp_api_support">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_support">Support
-                API</label>
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_support">API</label>
             </div>
+            <div>
+              <input class="c-chk__input" id="dsapp_zaf_support" name="feature-area" type="radio" value="dsapp_zaf_support">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_support">Support apps (ZAF)</label>
+            </div>
+            <div>
+              <input class="c-chk__input" id="dsapp_app_marketplace" name="feature-area" type="radio" value="dsapp_app_marketplace">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_app_marketplace">App Marketplace publishing</label>
+            </div>
+            <div>
+              <input class="c-chk__input" id="dsapp_sdk_support" name="feature-area" type="radio" value="dsapp_sdk_support">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_support">Mobile Support SDK</label>
+            </div>
+            <div>
+              <input class="c-chk__input" id="dsapp_api_clients" name="feature-area" type="radio" value="dsapp_api_clients">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_clients">API
+                Clients (PHP, Ruby, etc)</label>
+            </div>
+          </div>
+          <!--Chat-->
+          <legend class="c-txt__label u-mt-xs product-header">Chat</legend>
+          <div class="u-mb-xxs">
             <div>
               <input class="c-chk__input" id="dsapp_api_chat" name="feature-area" type="radio" value="dsapp_api_chat">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_chat">Chat
-                API</label>
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_chat">API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_api_talk" name="feature-area" type="radio" value="dsapp_api_talk">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_talk">Talk
-                API</label>
+              <input class="c-chk__input" id="dsapp_zaf_chat" name="feature-area" type="radio" value="dsapp_zaf_chat">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_chat">Chat apps (ZAF)</label>
+            </div>
+            <div>
+              <input class="c-chk__input" id="dsapp_sdk_chat" name="feature-area" type="radio" value="dsapp_sdk_chat">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_chat">Chat Mobile SDK</label>
             </div>
             <div>
               <input class="c-chk__input" id="dsapp_api_chat_convo" name="feature-area" type="radio" value="dsapp_api_chat_convo">
               <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_chat_convo">Chat
                 Conversations API</label>
             </div>
-            <div>
-              <input class="c-chk__input" id="dsapp_api_guide" name="feature-area" type="radio" value="dsapp_api_guide">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_guide">Guide
-                API</label>
-            </div>
-            <div>
-              <input class="c-chk__input" id="dsapp_api_sell" name="feature-area" type="radio" value="dsapp_api_sell">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_sell">Sell
-                API</label>
-            </div>
           </div>
         </div>
-        <!--Mobile SDK tools-->
         <div class="col-md-4">
-          <legend class="c-txt__label u-mt-xs">Mobile SDKs</legend>
+          <!--Talk-->
           <div class="u-mb-xxs">
+            <legend class="c-txt__label u-mt-xs product-header">Talk</legend>
             <div>
-              <input class="c-chk__input" id="dsapp_sdk_chat" name="feature-area" type="radio" value="dsapp_sdk_chat">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_chat">Chat SDK</label>
+              <input class="c-chk__input" id="dsapp_api_talk" name="feature-area" type="radio" value="dsapp_api_talk">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_talk">API</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_sdk_support" name="feature-area" type="radio" value="dsapp_sdk_support">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_support">Support SDK</label>
+              <input class="c-chk__input" id="dsapp_tpe_talk" name="feature-area" type="radio" value="dsapp_tpe_talk">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_tpe_talk">Talk Partner Edition (CTI)</label>
             </div>
           </div>
-        </div>
-        <!--Other tools-->
-        <div class="col-md-4">
-          <legend class="c-txt__label u-mt-xs ">Other</legend>
+          <!--Guide-->
           <div class="u-mb-xxs">
-            <div>
-              <input class="c-chk__input" id="dsapp_app_marketplace" name="feature-area" type="radio" value="dsapp_app_marketplace">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_app_marketplace">App Marketplace publishing</label>
-            </div>
-            <div>
-              <input class="c-chk__input" id="dsapp_api_clients" name="feature-area" type="radio" value="dsapp_api_clients">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_clients">API
-                Clients</label>
-            </div>
+            <legend class="c-txt__label u-mt-xs product-header">Guide</legend>
             <div>
               <input class="c-chk__input" id="dsapp_guide_customization" name="feature-area" type="radio" value="dsapp_guide_customization">
               <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_guide_customization">Guide/Gather
                 customization</label>
             </div>
-            <div>
-              <input class="c-chk__input" id="dsapp_other" name="feature-area" type="radio" value="dsapp_other">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_other">Other</label>
-            </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row u-pb-xs">
-        <!--ZAF tools-->
-        <div class="col-md-4">
-          <legend class="c-txt__label u-mt-xs">Apps Framework development</legend>
+          <!--Sell-->
           <div class="u-mb-xxs">
+            <legend class="c-txt__label u-mt-xs product-header">Sell</legend>
             <div>
-              <input class="c-chk__input" id="dsapp_zaf_support" name="feature-area" type="radio" value="dsapp_zaf_support">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_support">Support</label>
-            </div>
-            <div>
-              <input class="c-chk__input" id="dsapp_zaf_chat" name="feature-area" type="radio" value="dsapp_zaf_chat">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_chat">Chat</label>
+              <input class="c-chk__input" id="dsapp_api_sell" name="feature-area" type="radio" value="dsapp_api_sell">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_api_sell">API</label>
             </div>
             <div>
               <input class="c-chk__input" id="dsapp_zaf_sell" name="feature-area" type="radio" value="dsapp_zaf_sell">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_sell">Sell</label>
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_sell">Sell apps (ZAF)</label>
             </div>
           </div>
         </div>
-        <!--Sunshine tools-->
         <div class="col-md-4">
-          <legend class="c-txt__label u-mt-xs">Sunshine</legend>
-          <div class="u-mx-xxs">
+          <!--Sunshine-->
+          <div class="u-mb-xxs">
+            <legend class="c-txt__label u-mt-xs product-header">Sunshine</legend>
             <div>
               <input class="c-chk__input" id="dsapp_sunshine_co" name="feature-area" type="radio" value="dsapp_sunshine_co">
               <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sunshine_co">Custom
@@ -156,14 +143,22 @@
                 BridgeChannels Framework</label>
             </div>
           </div>
-        </div>
-        <!--Widget tools-->
-        <div class="col-md-4">
-          <legend class="c-txt__label u-mt-xs">Widget</legend>
+          <!--Widget-->
           <div class="u-mb-xxs">
+            <legend class="c-txt__label u-mt-xs product-header">Widget</legend>
+            <div class="u-mb-xxs">
+              <div>
+                <input class="c-chk__input" id="dsapp_widget" name="feature-area" type="radio" value="dsapp_widget">
+                <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_widget">Widget customization</label>
+              </div>
+            </div>
+          </div>
+          <!--Other-->
+          <div class="u-mb-xxs">
+            <legend class="c-txt__label u-mt-xs product-header">Other</legend>
             <div>
-              <input class="c-chk__input" id="dsapp_widget" name="feature-area" type="radio" value="dsapp_widget">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_widget">Widget</label>
+              <input class="c-chk__input" id="dsapp_other" name="feature-area" type="radio" value="dsapp_other">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_other">Other product area</label>
             </div>
           </div>
         </div>
