Tweaked a couple of labels.

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -47,12 +47,12 @@
               <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_zaf_support">Support apps (ZAF)</label>
             </div>
             <div>
-              <input class="c-chk__input" id="dsapp_app_marketplace" name="feature-area" type="radio" value="dsapp_app_marketplace">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_app_marketplace">App Marketplace publishing</label>
-            </div>
-            <div>
               <input class="c-chk__input" id="dsapp_sdk_support" name="feature-area" type="radio" value="dsapp_sdk_support">
               <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_support">Mobile Support SDK</label>
+            </div>
+            <div>
+              <input class="c-chk__input" id="dsapp_app_marketplace" name="feature-area" type="radio" value="dsapp_app_marketplace">
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_app_marketplace">App Marketplace publishing</label>
             </div>
             <div>
               <input class="c-chk__input" id="dsapp_api_clients" name="feature-area" type="radio" value="dsapp_api_clients">
@@ -73,7 +73,7 @@
             </div>
             <div>
               <input class="c-chk__input" id="dsapp_sdk_chat" name="feature-area" type="radio" value="dsapp_sdk_chat">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_chat">Chat Mobile SDK</label>
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_sdk_chat">Mobile Chat SDK</label>
             </div>
             <div>
               <input class="c-chk__input" id="dsapp_api_chat_convo" name="feature-area" type="radio" value="dsapp_api_chat_convo">
