Changed working for "other" selection.

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -158,7 +158,7 @@
             <legend class="c-txt__label u-mt-xs product-header">Other</legend>
             <div>
               <input class="c-chk__input" id="dsapp_other" name="feature-area" type="radio" value="dsapp_other">
-              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_other">Other product area</label>
+              <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="dsapp_other">Other dev platform area</label>
             </div>
           </div>
         </div>
